kubernetes/default/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "50"
spec:
  selector:
    app: readarr
  ports:
    - targetPort: 8787
      port: 8787
