kubernetes/default/readarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "100"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`readarr.bhamm-lab.com`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: readarr
          port: 8787
  tls:
    secretName: bhamm-lab-tls
